force-app/main/default/objects/Web_Inquiry__c/fields/Strategic_Priorities__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Priorities__c</fullName>
    <label>Strategic Priorities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Long term employment</fullName>
            </value>
            <value>
                <fullName>Short term/transitional employment</fullName>
            </value>
            <value>
                <fullName>Early childhood education</fullName>
            </value>
            <value>
                <fullName>K-12 education</fullName>
            </value>
            <value>
                <fullName>Violence intervention</fullName>
            </value>
            <value>
                <fullName>Emergency/transitional housing</fullName>
            </value>
            <value>
                <fullName>Long term housing</fullName>
            </value>
            <value>
                <fullName>Recovery care</fullName>
            </value>
            <value>
                <fullName>Mental health</fullName>
            </value>
            <value>
                <fullName>Domestic violence</fullName>
            </value>
            <value>
                <fullName>Immigration</fullName>
            </value>
            <value>
                <fullName>Food relief/security</fullName>
            </value>
            <value>
                <fullName>Post-secondary education and access</fullName>
            </value>
            <value>
                <fullName>Reducing justice-system involvement/recidivism</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>