force-app/main/default/objects/Web_Inquiry__c/fields/Support_Within_1_2_Years__c.field-meta.xml
<CustomField>
    <fullName>Support_Within_1_2_Years__c</fullName>
    <label>Support Within 1-2 Years</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Launching workforce development program through affiliation.</fullName>
            </value>
            <value>
                <fullName>Targeted technical assistance with a specific part of Cara&apos;s service delivery model</fullName>
            </value>
            <value>
                <fullName>Launching or deepening a social enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>