force-app/main/default/objects/Web_Inquiry__c/fields/Targeted_Technical_Assistance__c.field-meta.xml
<CustomField>
    <fullName>Targeted_Technical_Assistance__c</fullName>
    <label>Targeted Technical Assistance</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recruitment practices</fullName>
            </value>
            <value>
                <fullName>Socio-emotional curriculum</fullName>
            </value>
            <value>
                <fullName>Competency based training</fullName>
            </value>
            <value>
                <fullName>Employment services</fullName>
            </value>
            <value>
                <fullName>Retention practices</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>