force-app/main/default/objects/Web_Inquiry__c/fields/Top_Outcomes_Goals_Tracked__c.field-meta.xml
<CustomField>
    <fullName>Top_Outcomes_Goals_Tracked__c</fullName>
    <label>Top Outcomes/Goals Tracked</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>