force-app/main/default/objects/Web_Inquiry__c/fields/Website_Source__c.field-meta.xml
<CustomField>
    <fullName>Website_Source__c</fullName>
    <inlineHelpText>Website origin of form submission</inlineHelpText>
    <label>Website Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>