force-app/main/default/objects/Web_Inquiry__c/fields/What_year_and_what_happened_at_Cara__c.field-meta.xml
<CustomField>
    <fullName>What_year_and_what_happened_at_Cara__c</fullName>
    <label>What year and what happened at Cara?</label>
    <type>TextArea</type>
</CustomField>