force-app/main/default/objects/Web_Inquiry__c/fields/Workforce_Development_Employees__c.field-meta.xml
<CustomField>
    <fullName>Workforce_Development_Employees__c</fullName>
    <label>Workforce Development Employees</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2 - 4</fullName>
            </value>
            <value>
                <fullName>5 - 9</fullName>
            </value>
            <value>
                <fullName>10+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>