force-app/main/default/objects/Web_Inquiry__c/fields/Year_Organization_Founded__c.field-meta.xml
<CustomField>
    <fullName>Year_Organization_Founded__c</fullName>
    <label>Year Organization Founded</label>
    <length>4</length>
    <type>Text</type>
</CustomField>