force-app/main/default/objects/Web_Inquiry__c/recordTypes/Contact_Us_Form.recordType-meta.xml
<RecordType>
    <fullName>Contact_Us_Form</fullName>
    <active>true</active>
    <description>Contact Us form submissions from Cara, Cleanslate, and Cara Connects Websites.</description>
    <label>Contact Us Form</label>
</RecordType>