force-app/main/default/objects/Web_Inquiry__c/recordTypes/Participant_Request.recordType-meta.xml
<RecordType>
    <fullName>Participant_Request</fullName>
    <active>true</active>
    <description>Data entered via the Cara&apos;s Rental Assistance and, formerly, Emergency Fund forms using the Form Assembly app.</description>
    <label>Participant Request</label>
</RecordType>