force-app/main/default/objects/Web_Inquiry__c/recordTypes/Program_Inquiry_Form.recordType-meta.xml
<RecordType>
    <fullName>Program_Inquiry_Form</fullName>
    <active>true</active>
    <description>Record type used when someone applies for the program online</description>
    <label>Program Inquiry Form</label>
</RecordType>