force-app/main/default/objects/Web_Inquiry__c/recordTypes/RFI_Form.recordType-meta.xml
<RecordType>
    <fullName>RFI_Form</fullName>
    <active>true</active>
    <description>For Request for Information Submissions</description>
    <label>RFI Form</label>
</RecordType>