force-app/main/default/objects/Web_Inquiry__c/recordTypes/Volunteer_Inquiry.recordType-meta.xml
<RecordType>
    <fullName>Volunteer_Inquiry</fullName>
    <active>true</active>
    <description>Data entered via the volunteer information form using the Form Assembly app.</description>
    <label>Volunteer Inquiry</label>
</RecordType>