force-app/main/default/objects/Web_Inquiry__c/listViews/Emergency_Fund_Requests_Unresolved.listView-meta.xml
<ListView>
    <fullName>Emergency_Fund_Requests_Unresolved</fullName>
    <columns>NAME</columns>
    <columns>Inquiry_Result__c</columns>
    <columns>Inquiry_Source__c</columns>
    <columns>Comments__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Contact__c</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Web_Inquiry__c.Participant_Request</value>
    </filters>
    <filters>
        <field>Inquiry_Result__c</field>
        <operation>equals</operation>
        <value>Unresolved</value>
    </filters>
    <label>Emergency Fund Requests, Unresolved</label>
    <language>en_US</language>
</ListView>