force-app/main/default/objects/Web_Inquiry__c/listViews/Online_Application_Pending.listView-meta.xml
<ListView>
    <fullName>Online_Application_Pending</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Email__c</columns>
    <columns>How_did_you_hear_about_Cara_Collective__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Web_Inquiry__c.Program_Inquiry_Form</value>
    </filters>
    <filters>
        <field>Approval_Status__c</field>
        <operation>equals</operation>
    </filters>
    <label>Program Inquiry Form, Pending</label>
</ListView>