force-app/main/default/objects/Web_Inquiry__c/listViews/Program_Inquiry_Form_Approved.listView-meta.xml
<ListView>
    <fullName>Program_Inquiry_Form_Approved</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Email__c</columns>
    <columns>How_did_you_hear_about_Cara_Collective__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Web_Inquiry__c.Program_Inquiry_Form</value>
    </filters>
    <filters>
        <field>Approval_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Program Inquiry Form, Approved</label>
</ListView>