force-app/main/default/objects/Web_Inquiry__c/listViews/Rental_Assistance_Request.listView-meta.xml
<ListView>
    <fullName>Rental_Assistance_Request</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Created_Date_Time__c</columns>
    <columns>Contact__c</columns>
    <columns>Full_Name__c</columns>
    <columns>Inquiry_Source__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Inquiry_Source__c</field>
        <operation>equals</operation>
        <value>Rental Assistance Request</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>7/1/2024 12:00 AM</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Web_Inquiry__c.Participant_Request</value>
    </filters>
    <label>Rental Assistance Request</label>
</ListView>