force-app/main/default/objects/Web_Inquiry__c/listViews/RFI_Form_Unresolved.listView-meta.xml
<ListView>
    <fullName>RFI_Form_Unresolved</fullName>
    <columns>NAME</columns>
    <columns>Organization__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Organization__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>RFI Form, Unresolved</label>
</ListView>